--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,13 @@
             <version>2.2.6.RELEASE</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>28.2-jre</version>
+        </dependency>
+
     </dependencies>
 
 </project>
